#477 usuned manage pages disabled and adjusted another pages

--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -2,6 +2,7 @@
 @model ChangePasswordModel
 @{
     ViewData["Title"] = "Change password";
+    ViewData["ManageDescription"] = "Está é sua página de troca senha.";
 }
 
 @section Styles {
