--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/_LayoutManage.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/_LayoutManage.cshtml
@@ -11,11 +11,11 @@
     <!-- Mask -->
     <span class="mask bg-gradient-default opacity-8"></span>
     <!-- Header container -->
-    <div class="container-fluid d-flex align-items-center">
+    <div class="container-fluid align-items-center">
         <div class="row">
             <div class="col-10">
-                <h1 class="display-2 text-white">Hello @User.Identity.Name</h1>
-                <p class="text-white">This is your profile page. You can see the progress you've made with your work and manage your projects or assigned tasks</p>
+                <h1 class="display-2 text-white">Olá @User.Identity.Name</h1>
+                <p class="text-white">@ViewData["ManageDescription"]</p>
             </div>
         </div>
     </div>
