--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -4,11 +4,10 @@
     <a asp-page="./Index" class="list-group-item list-group-item-action @Html.GetActiveClass(Context.Request, Url.Page("./Index"))">
         Profile
     </a>
-    <a asp-page="./Email" class="list-group-item list-group-item-action @Html.GetActiveClass(Context.Request, Url.Page("./Email"))">Email</a>
-    <a asp-page="./ChangePassword" class="list-group-item list-group-item-action @Html.GetActiveClass(Context.Request, Url.Page("./ChangePassword"))">Senha</a>
-
-    <a asp-page="./ExternalLogins" class="list-group-item list-group-item-action  @Html.GetActiveClass(Context.Request, Url.Page("./ExternalLogins"))">Login Externo (remove)</a>
-
-    <a asp-page="./TwoFactorAuthentication" class="list-group-item list-group-item-action  @Html.GetActiveClass(Context.Request, Url.Page("./TwoFactorAuthentication"))">Autenticação em duas etapas</a>
-    <a asp-page="./PersonalData" class="list-group-item list-group-item-action  @Html.GetActiveClass(Context.Request, Url.Page("./PersonalData"))">Dados Pessoais</a>
+    <a asp-page="./Email" class="list-group-item list-group-item-action @Html.GetActiveClass(Context.Request, Url.Page("./Email"))">
+        Email
+    </a>
+    <a asp-page="./ChangePassword" class="list-group-item list-group-item-action @Html.GetActiveClass(Context.Request, Url.Page("./ChangePassword"))">
+        Senha
+    </a>
 </div>
