--- a/_source/BaseAdminProject/src/sass/common/forms.scss
+++ b/_source/BaseAdminProject/src/sass/common/forms.scss
@@ -36,3 +36,11 @@
         background-color: rgba($danger, 0.1);
     }
 }
+
+.input-group {
+    &--disabled {
+        span {
+            background-color: #e9ecef;
+        }
+    }
+}
