--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/ConfirmEmailChange.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/ConfirmEmailChange.cshtml
@@ -1,8 +1,47 @@
 ﻿@page
 @model ConfirmEmailChangeModel
 @{
-    ViewData["Title"] = "Confirm email change";
+    ViewData["Title"] = "Confirmação de troca de email";
 }
 
-<h1>@ViewData["Title"]</h1>
-<partial name="_StatusMessageAccount" model="Model.StatusMessage" />
+<!-- Main content -->
+<div class="main-content bg-default h-100vh">
+    <!-- Header -->
+    <div class="header bg-gradient-primary py-7">
+        <div class="container">
+            <div class="header-body text-center mb-7">
+                <div class="row justify-content-center">
+                    <div class="col-lg-5 col-md-7">
+                        <h1 class="text-white">@ViewData["title"]</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="separator separator-bottom separator-skew zindex-100">
+            <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                <polygon class="fill-default" points="2560 0 2560 100 0 100"></polygon>
+            </svg>
+        </div>
+    </div>
+
+    <!-- Page content -->
+    <div class="container mt--8 pb-5">
+        <div class="row justify-content-center">
+            <div class="col-lg-5 col-md-7">
+                <div class="card bg-secondary border-0 mb-0">
+                    <div class="card-body">
+                        <partial name="_StatusMessage" />
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-6">
+                        <a asp-page="./ResendEmailConfirmation" class="text-light"><small>Reenviar email de confirmação</small></a>
+                    </div>
+                    <div class="col-6 text-right">
+                        <a asp-page="./Login" class="text-light"><small>Entrar</small></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
