--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/Email.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/Email.cshtml
@@ -2,6 +2,16 @@
 @model EmailModel
 @{
     ViewData["Title"] = "Manage Email";
+    ViewData["ManageDescription"] = "Está é sua página de email, onde é possível trocar seu email.";
+}
+
+@section Styles {
+    <environment names="Development">
+        <link href="~/dist/css/email.bundle.css" rel="stylesheet" />
+    </environment>
+    <environment exclude="Development">
+        <link href="~/dist/css/email.bundle.css" asp-append-version="true" rel="stylesheet" />
+    </environment>
 }
 
 <div class="card">
@@ -13,32 +23,71 @@
         </div>
     </div>
     <div class="card-body">
-        <partial name="_StatusMessageAccount" model="Model.StatusMessage" />
-        <form id="email-form" method="post">
+        <partial name="_StatusMessage" />
+
+        <form id="emailForm" method="post">
             <div asp-validation-summary="ModelOnly" class="invalid-feedback"></div>
             <div class="form-group">
                 <label asp-for="Email" class="form-control-label"></label>
-                @if (Model.IsEmailConfirmed)
-                {
-                    <div class="input-group">
-                        <input asp-for="Email" class="form-control" disabled />
-                        <div class="input-group-append">
-                            <span class="input-group-text text-success font-weight-bold">✓</span>
-                        </div>
+
+                <div class="input-group input-group-merge input-group--disabled">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">
+                            <i class="fas fa-user"></i>
+                        </span>
                     </div>
-                }
-                else
-                {
-                    <input asp-for="Email" class="form-control" disabled />
-                    <button id="email-verification" type="submit" asp-page-handler="SendVerificationEmail" class="btn btn-link">Send verification email</button>
-                }
+
+                    <input asp-for="Email" class="form-control" disabled>
+
+                    @if (Model.IsEmailConfirmed)
+                    {
+                        <div class="input-group-append">
+                            <span class="input-group-text text-success">
+                                <i class="fas fa-check"></i>
+                            </span>
+                        </div>
+                    }
+                    else
+                    {
+                        <button type="submit" asp-page-handler="SendVerificationEmail" class="btn btn-link">
+                            Enviar email de verificação
+                            <span class="d-none spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                            <span class="sr-only">Carregando...</span>
+                        </button>
+                    }
+                </div>
             </div>
+
             <div class="form-group">
                 <label asp-for="Input.NewEmail" class="form-control-label"></label>
-                <input asp-for="Input.NewEmail" class="form-control" />
+
+                <div class="input-group input-group-merge">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">
+                            <i class="fas fa-user"></i>
+                        </span>
+                    </div>
+
+                    <input asp-for="Input.NewEmail" class="form-control" />
+                </div>
+
                 <span asp-validation-for="Input.NewEmail" class="invalid-feedback"></span>
             </div>
-            <button id="change-email-button" type="submit" asp-page-handler="ChangeEmail" class="btn btn-primary">Change email</button>
+
+            <button type="submit" asp-page-handler="ChangeEmail" class="btn btn-primary float-right">
+                Trocar Email
+                <span class="d-none spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                <span class="sr-only">Carregando...</span>
+            </button>
         </form>
     </div>
 </div>
+
+@section Scripts {
+    <environment names="Development">
+        <script src="~/dist/js/email.bundle.js"></script>
+    </environment>
+    <environment exclude="Development">
+        <script src="~/dist/js/email.bundle.js" asp-append-version="true"></script>
+    </environment>
+}
