--- a/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/_source/BaseAdminProject/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -3,6 +3,7 @@
 @model IndexModel
 @{
     ViewData["Title"] = "Perfil";
+    ViewData["ManageDescription"] = "Está é sua página de perfil, onde contém suas informações básicas.";
 }
 
 @section Styles {
@@ -13,53 +14,6 @@
         <link href="~/dist/css/profile.bundle.css" asp-append-version="true" rel="stylesheet" />
     </environment>
 }
-
-<div class="row">
-    <div class="col-lg-6">
-        <div class="card bg-gradient-info border-0">
-            <!-- Card body -->
-            <div class="card-body">
-                <div class="row">
-                    <div class="col">
-                        <h5 class="card-title text-uppercase text-muted mb-0 text-white">Total traffic</h5>
-                        <span class="h2 font-weight-bold mb-0 text-white">350,897</span>
-                    </div>
-                    <div class="col-auto">
-                        <div class="icon icon-shape bg-white text-dark rounded-circle shadow">
-                            <i class="ni ni-active-40"></i>
-                        </div>
-                    </div>
-                </div>
-                <p class="mt-3 mb-0 text-sm">
-                    <span class="text-white mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
-                    <span class="text-nowrap text-light">Since last month</span>
-                </p>
-            </div>
-        </div>
-    </div>
-    <div class="col-lg-6">
-        <div class="card bg-gradient-danger border-0">
-            <!-- Card body -->
-            <div class="card-body">
-                <div class="row">
-                    <div class="col">
-                        <h5 class="card-title text-uppercase text-muted mb-0 text-white">Performance</h5>
-                        <span class="h2 font-weight-bold mb-0 text-white">49,65%</span>
-                    </div>
-                    <div class="col-auto">
-                        <div class="icon icon-shape bg-white text-dark rounded-circle shadow">
-                            <i class="ni ni-spaceship"></i>
-                        </div>
-                    </div>
-                </div>
-                <p class="mt-3 mb-0 text-sm">
-                    <span class="text-white mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
-                    <span class="text-nowrap text-light">Since last month</span>
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
 
 <div class="card">
     <div class="card-header">
@@ -77,12 +31,28 @@
 
             <div class="form-group">
                 <label asp-for="Username" class="form-control-label"></label>
-                <input asp-for="Username" class="form-control" disabled />
+                <div class="input-group input-group-merge input-group--disabled">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">
+                            <i class="fas fa-user"></i>
+                        </span>
+                    </div>
+
+                    <input asp-for="Username" class="form-control" disabled>
+                </div>
             </div>
 
             <div class="form-group">
                 <label asp-for="Input.PhoneNumber" class="form-control-label"></label>
-                <input asp-for="Input.PhoneNumber" class="form-control" data-mask="@Globals.MaskPhone" />
+                <div class="input-group input-group-merge">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">
+                            <i class="fas fa-phone"></i>
+                        </span>
+                    </div>
+
+                    <input asp-for="Input.PhoneNumber" class="form-control" data-mask="@Globals.MaskPhone" />
+                </div>
                 <span asp-validation-for="Input.PhoneNumber" class="invalid-feedback"></span>
             </div>
 
