--- a/_source/BaseAdminProject/Views/User/AddUser.cshtml
+++ b/_source/BaseAdminProject/Views/User/AddUser.cshtml
@@ -1,4 +1,5 @@
-﻿@model BaseAdminProject.Models.FormModels.AddUserFormModel
+﻿@using BaseAdminProject.Business.Core
+@model BaseAdminProject.Models.FormModels.AddUserFormModel
 @{
     ViewData["Title"] = "Adicionar Usuário";
 }
@@ -89,7 +90,7 @@
                                                 </span>
                                             </div>
 
-                                            <input asp-for="PhoneNumber" class="form-control" placeholder="(49) 9 9999-9999">
+                                            <input asp-for="PhoneNumber" class="form-control" data-mask="@Globals.MaskPhone" >
                                         </div>
                                         <span asp-validation-for="PhoneNumber" class="invalid-feedback"></span>
                                     </div>
