--- a/_source/BaseAdminProject/Views/Account/ForgotPassword.cshtml
+++ b/_source/BaseAdminProject/Views/Account/ForgotPassword.cshtml
@@ -1,7 +1,7 @@
-﻿@page
-@model ForgotPasswordModel
+﻿@model BaseAdminProject.Models.FormModels.ForgotPasswordFormModel
 @{
     ViewData["Title"] = "Esqueceu sua senha?";
+    Layout = "_LayoutBase";
 }
 
 @section Styles {
@@ -39,11 +39,11 @@
             <div class="col-lg-5 col-md-7">
                 <div class="card bg-secondary border-0 mb-0">
                     <div class="card-body px-lg-5 py-lg-5">
-                        <form id="forgotPasswordForm" method="post">
+                        <form asp-controller="Account" asp-action="ForgotPassword" id="forgotPasswordForm" method="post">
                             <div asp-validation-summary="ModelOnly"></div>
 
                             <div class="form-group">
-                                <label asp-for="Input.Email" class="form-control-label"></label>
+                                <label asp-for="Email" class="form-control-label"></label>
                                 <div class="input-group input-group-merge">
                                     <div class="input-group-prepend">
                                         <span class="input-group-text">
@@ -51,9 +51,9 @@
                                         </span>
                                     </div>
 
-                                    <input asp-for="Input.Email" class="form-control" placeholder="Email">
+                                    <input asp-for="Email" class="form-control" placeholder="Email">
                                 </div>
-                                <span asp-validation-for="Input.Email" class="invalid-feedback"></span>
+                                <span asp-validation-for="Email" class="invalid-feedback"></span>
                             </div>
 
                             <button type="submit" class="btn btn-primary float-right">
@@ -66,10 +66,10 @@
                 </div>
                 <div class="row mt-3">
                     <div class="col-6">
-                        <a asp-page="./ResendEmailConfirmation" class="text-light"><small>Reenviar email de confirmação</small></a>
+                        <a asp-controller="Account" asp-action="ResendConfirmEmail" class="text-light"><small>Reenviar email de confirmação</small></a>
                     </div>
                     <div class="col-6 text-right">
-                        <a asp-page="./Login" class="text-light"><small>Entrar</small></a>
+                        <a asp-controller="Account" asp-action="Login" class="text-light"><small>Entrar</small></a>
                     </div>
                 </div>
             </div>
