--- a/_source/BaseAdminProject/Views/Account/ResendConfirmEmail.cshtml
+++ b/_source/BaseAdminProject/Views/Account/ResendConfirmEmail.cshtml
@@ -1,7 +1,7 @@
-﻿@page
-@model ResendEmailConfirmationModel
+﻿@model BaseAdminProject.Models.FormModels.ResendConfirmEmailFormModel
 @{
     ViewData["Title"] = "Reenviar email de confirmação";
+    Layout = "_LayoutBase";
 }
 
 @section Styles {
@@ -23,7 +23,7 @@
                     <div class="col-lg-5 col-md-7">
                         <h1 class="text-white">@ViewData["title"]</h1>
                     </div>
-                </div>
+                </div>S
             </div>
         </div>
         <div class="separator separator-bottom separator-skew zindex-100">
@@ -43,7 +43,7 @@
                             <div asp-validation-summary="ModelOnly"></div>
 
                             <div class="form-group">
-                                <label asp-for="Input.Email" class="form-control-label"></label>
+                                <label asp-for="Email" class="form-control-label"></label>
                                 <div class="input-group input-group-merge">
                                     <div class="input-group-prepend">
                                         <span class="input-group-text">
@@ -51,9 +51,9 @@
                                         </span>
                                     </div>
 
-                                    <input asp-for="Input.Email" class="form-control" placeholder="Email">
+                                    <input asp-for="Email" class="form-control" placeholder="Email">
                                 </div>
-                                <span asp-validation-for="Input.Email" class="invalid-feedback"></span>
+                                <span asp-validation-for="Email" class="invalid-feedback"></span>
                             </div>
 
                             <button type="submit" class="btn btn-primary float-right">
@@ -66,10 +66,10 @@
                 </div>
                 <div class="row mt-3">
                     <div class="col-6">
-                        <a asp-page="./ForgotPassword" class="text-light"><small>Esqueceu a senha?</small></a>
+                        <a asp-controller="Account" asp-action="ForgotPassword" class="text-light"><small>Esqueceu a senha?</small></a>
                     </div>
                     <div class="col-6 text-right">
-                        <a asp-page="./Login" class="text-light"><small>Entrar</small></a>
+                        <a asp-controller="Account" asp-action="Login" class="text-light"><small>Entrar</small></a>
                     </div>
                 </div>
             </div>
