--- a/_source/BaseAdminProject/Views/Account/ResetPassword.cshtml
+++ b/_source/BaseAdminProject/Views/Account/ResetPassword.cshtml
@@ -1,16 +1,15 @@
-﻿@page
-@model LoginModel
-
+﻿@model BaseAdminProject.Models.FormModels.ResetPasswordFormModel
 @{
-    ViewData["Title"] = "Entrar";
+    ViewData["Title"] = "Redefinir Senha";
+    Layout = "_LayoutBase";
 }
 
 @section Styles {
     <environment names="Development">
-        <link href="~/dist/css/login.bundle.css" rel="stylesheet" />
+        <link href="~/dist/css/reset-password.bundle.css" rel="stylesheet" />
     </environment>
     <environment exclude="Development">
-        <link href="~/dist/css/login.bundle.css" asp-append-version="true" rel="stylesheet" />
+        <link href="~/dist/css/reset-password.bundle.css" asp-append-version="true" rel="stylesheet" />
     </environment>
 }
 
@@ -40,13 +39,12 @@
             <div class="col-lg-5 col-md-7">
                 <div class="card bg-secondary border-0 mb-0">
                     <div class="card-body px-lg-5 py-lg-5">
-                        <partial name="_StatusMessage" />
-
-                        <form id="loginForm" method="post" novalidate>
+                        <form asp-controller="Account" asp-action="ResetPassword" id="resetPasswordForm" method="post">
                             <div asp-validation-summary="ModelOnly"></div>
+                            <input asp-for="Code" />
 
-                            <div class="form-group mb-3">
-                                <label asp-for="Input.EmailUsuario" class="form-control-label"></label>
+                            <div class="form-group">
+                                <label asp-for="Email" class="form-control-label"></label>
                                 <div class="input-group input-group-merge">
                                     <div class="input-group-prepend">
                                         <span class="input-group-text">
@@ -54,14 +52,13 @@
                                         </span>
                                     </div>
 
-                                    <input asp-for="Input.EmailUsuario" class="form-control" placeholder="Email">
+                                    <input asp-for="Email" class="form-control" placeholder="Email">
                                 </div>
-
-                                <span asp-validation-for="Input.EmailUsuario" class="invalid-feedback"></span>
+                                <span asp-validation-for="Email" class="invalid-feedback"></span>
                             </div>
 
                             <div class="form-group mb-3">
-                                <label asp-for="Input.Password" class="form-control-label"></label>
+                                <label asp-for="Password" class="form-control-label"></label>
 
                                 <div class="input-group input-group-merge">
                                     <div class="input-group-prepend">
@@ -70,7 +67,7 @@
                                         </span>
                                     </div>
 
-                                    <input asp-for="Input.Password" class="form-control" placeholder="*******">
+                                    <input asp-for="Password" class="form-control" placeholder="Senha">
 
                                     <div class="input-group-append eye-password eyePassword">
                                         <span class="input-group-text">
@@ -79,16 +76,33 @@
                                     </div>
                                 </div>
 
-                                <span asp-validation-for="Input.Password" class="invalid-feedback"></span>
+                                <span asp-validation-for="Password" class="invalid-feedback"></span>
                             </div>
 
-                            <div class="custom-control custom-control-alternative custom-checkbox mb-3">
-                                <input asp-for="Input.RememberMe" class="custom-control-input">
-                                <label asp-for="Input.RememberMe" class="custom-control-label"></label>
+                            <div class="form-group mb-3">
+                                <label asp-for="ConfirmPassword" class="form-control-label"></label>
+
+                                <div class="input-group input-group-merge">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text">
+                                            <i class="fas fa-lock"></i>
+                                        </span>
+                                    </div>
+
+                                    <input asp-for="ConfirmPassword" class="form-control" placeholder="Senha">
+
+                                    <div class="input-group-append eye-password eyePassword">
+                                        <span class="input-group-text">
+                                            <i class="fas fa-eye-slash"></i>
+                                        </span>
+                                    </div>
+                                </div>
+
+                                <span asp-validation-for="ConfirmPassword" class="invalid-feedback"></span>
                             </div>
 
-                            <button type="submit" class="btn btn-primary my-4 float-right">
-                                Entrar
+                            <button type="submit" class="btn btn-primary float-right">
+                                Enviar
                                 <span class="d-none spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
                                 <span class="sr-only">Carregando...</span>
                             </button>
@@ -97,10 +111,10 @@
                 </div>
                 <div class="row mt-3">
                     <div class="col-6">
-                        <a asp-page="./ForgotPassword" class="text-light"><small>Esqueceu a senha?</small></a>
+                        <a asp-controller="Account" asp-action="ResendConfirmEmail" class="text-light"><small>Reenviar email de confirmação</small></a>
                     </div>
                     <div class="col-6 text-right">
-                        <a asp-page="./ResendEmailConfirmation" class="text-light"><small>Reenviar email de confirmação</small></a>
+                        <a asp-controller="Account" asp-action="Login" class="text-light"><small>Entrar</small></a>
                     </div>
                 </div>
             </div>
@@ -110,9 +124,9 @@
 
 @section Scripts {
     <environment names="Development">
-        <script src="~/dist/js/login.bundle.js"></script>
+        <script src="~/dist/js/reset-password.bundle.js"></script>
     </environment>
     <environment exclude="Development">
-        <script src="~/dist/js/login.bundle.js" asp-append-version="true"></script>
+        <script src="~/dist/js/reset-password.bundle.js" asp-append-version="true"></script>
     </environment>
 }
