--- a/_source/BaseAdminProject/Views/Shared/_TopNav.cshtml
+++ b/_source/BaseAdminProject/Views/Shared/_TopNav.cshtml
@@ -229,9 +229,9 @@
                                 <span>Support</span>
                             </a>*@
                         <div class="dropdown-divider"></div>
-                        <a asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" class="dropdown-item">
+                        <a asp-controller="Account" asp-action="Logout" class="dropdown-item">
                             <i class="fas fa-sign-out-alt"></i>
-                            <span>Logout</span>
+                            <span>Sair</span>
 
                             @*<form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                                     <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
