--- a/_source/BaseAdminProject/Views/User/Index.cshtml
+++ b/_source/BaseAdminProject/Views/User/Index.cshtml
@@ -20,7 +20,7 @@
                     <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
                         <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
                             <li class="breadcrumb-item">
-                                <a asp-controller="Home" asp-action="Index"><i class="fas fa-home"></i></a>
+                                <a asp-controller="Account" asp-action="Index"><i class="fas fa-home"></i></a>
                             </li>
                             <li class="breadcrumb-item active" aria-current="page"><i class="fas fa-users"></i> @ViewData["Title"]</li>
                         </ol>
