--- a/_source/BaseAdminProject/Views/_ViewImports.cshtml
+++ b/_source/BaseAdminProject/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using BaseAdminProject
 @using BaseAdminProject.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, BaseAdminProject
