#477 update phone, email, username and change password

--- a/_source/BaseAdminProject/Views/Account/ChangePassword.cshtml
+++ b/_source/BaseAdminProject/Views/Account/ChangePassword.cshtml
@@ -1,7 +1,7 @@
-﻿@page
-@model ChangePasswordModel
+﻿@model BaseAdminProject.Models.FormModels.ChangePasswordFormModel
 @{
-    ViewData["Title"] = "Change password";
+    ViewData["Title"] = "Senha";
+    Layout = "_LayoutManage";
     ViewData["ManageDescription"] = "Está é sua página de troca senha.";
 }
 
@@ -29,7 +29,7 @@
             <div asp-validation-summary="ModelOnly"></div>
 
             <div class="form-group mb-3">
-                <label asp-for="Input.OldPassword" class="form-control-label"></label>
+                <label asp-for="OldPassword" class="form-control-label"></label>
 
                 <div class="input-group input-group-merge">
                     <div class="input-group-prepend">
@@ -38,7 +38,7 @@
                         </span>
                     </div>
 
-                    <input asp-for="Input.OldPassword" class="form-control" placeholder="*******">
+                    <input asp-for="OldPassword" class="form-control" placeholder="*******">
 
                     <div class="input-group-append eye-password eyePassword">
                         <span class="input-group-text">
@@ -47,11 +47,11 @@
                     </div>
                 </div>
 
-                <span asp-validation-for="Input.OldPassword" class="invalid-feedback"></span>
+                <span asp-validation-for="OldPassword" class="invalid-feedback"></span>
             </div>
 
             <div class="form-group mb-3">
-                <label asp-for="Input.NewPassword" class="form-control-label"></label>
+                <label asp-for="NewPassword" class="form-control-label"></label>
 
                 <div class="input-group input-group-merge">
                     <div class="input-group-prepend">
@@ -60,7 +60,7 @@
                         </span>
                     </div>
 
-                    <input asp-for="Input.NewPassword" class="form-control" placeholder="*******">
+                    <input asp-for="NewPassword" class="form-control" placeholder="*******">
 
                     <div class="input-group-append eye-password eyePassword">
                         <span class="input-group-text">
@@ -69,11 +69,11 @@
                     </div>
                 </div>
 
-                <span asp-validation-for="Input.NewPassword" class="invalid-feedback"></span>
+                <span asp-validation-for="NewPassword" class="invalid-feedback"></span>
             </div>
 
             <div class="form-group mb-3">
-                <label asp-for="Input.ConfirmPassword" class="form-control-label"></label>
+                <label asp-for="ConfirmPassword" class="form-control-label"></label>
 
                 <div class="input-group input-group-merge">
                     <div class="input-group-prepend">
@@ -82,7 +82,7 @@
                         </span>
                     </div>
 
-                    <input asp-for="Input.ConfirmPassword" class="form-control" placeholder="*******">
+                    <input asp-for="ConfirmPassword" class="form-control" placeholder="*******">
 
                     <div class="input-group-append eye-password eyePassword">
                         <span class="input-group-text">
@@ -91,7 +91,7 @@
                     </div>
                 </div>
 
-                <span asp-validation-for="Input.ConfirmPassword" class="invalid-feedback"></span>
+                <span asp-validation-for="ConfirmPassword" class="invalid-feedback"></span>
             </div>
 
             <button type="submit" class="btn btn-primary float-right">
