--- a/_source/BaseAdminProject/Views/Account/Index.cshtml
+++ b/_source/BaseAdminProject/Views/Account/Index.cshtml
@@ -1,6 +1,54 @@
-﻿@{
+﻿@using BaseAdminProject.Business.Core
+@model BaseAdminProject.Models.ViewModels.ProfileViewModel
+@{
     ViewData["Title"] = "Perfil";
+    Layout = "_LayoutManage";
+    ViewData["ManageDescription"] = "Está é sua página de perfil, onde contém suas informações básicas.";
 }
 
-<h1>Index</h1>
+@section Styles {
+    <environment names="Development">
+        <link href="~/dist/css/profile.bundle.css" rel="stylesheet" />
+    </environment>
+    <environment exclude="Development">
+        <link href="~/dist/css/profile.bundle.css" asp-append-version="true" rel="stylesheet" />
+    </environment>
+}
 
+<div class="card">
+    <div class="card-header">
+        <div class="row align-items-center">
+            <div class="col-8">
+                <h3 class="mb-0">@ViewData["Title"]</h3>
+            </div>
+        </div>
+    </div>
+    <div class="card-body">
+        <partial name="_StatusMessage" />
+        
+        <div id="usernameFormWrapper" class="mb-4">
+            <partial name="Partials/UsernameForm" model="Model.UsernameForm" />
+        </div>
+        
+        <hr/>
+
+        <div id="phoneFormWrapper" class="mb-4">
+            <partial name="Partials/PhoneForm" model="Model.PhoneForm" />
+        </div>
+        
+        <hr/>
+
+        <div id="emailFormWrapper">
+            <partial name="Partials/EmailForm" model="Model.EmailForm" />
+        </div>
+    </div>
+</div>
+
+@section Scripts {
+    <environment names="Development">
+        <script src="~/dist/js/profile.bundle.js"></script>
+    </environment>
+    <environment exclude="Development">
+        <script src="~/dist/js/profile.bundle.js" asp-append-version="true"></script>
+    </environment>
+}
