#477 fix user table resize and added username to seed

--- a/_source/BaseAdminProject/Views/User/Index.cshtml
+++ b/_source/BaseAdminProject/Views/User/Index.cshtml
@@ -51,7 +51,7 @@
                     </p>
                 </div>
                 <div class="table-responsive py-4">
-                    <table class="table table-flush text-center" id="userDataTable">
+                    <table class="table table-flush text-center w-100" id="userDataTable">
                         <thead class="thead-light">
                             <tr>
                                 <th>Username</th>
