#477 added news fields on user and many changes

--- a/_source/BaseAdminProject/Views/Account/ForgotPassword.cshtml
+++ b/_source/BaseAdminProject/Views/Account/ForgotPassword.cshtml
@@ -20,7 +20,7 @@
         <div class="container">
             <div class="header-body text-center mb-7">
                 <div class="row justify-content-center">
-                    <div class="col-lg-5 col-md-7">
+                    <div class="col-12 col-sm-10 col-md-8 col-xl-6">
                         <h1 class="text-white">@ViewData["title"]</h1>
                     </div>
                 </div>
@@ -36,7 +36,7 @@
     <!-- Page content -->
     <div class="container mt--8 pb-5">
         <div class="row justify-content-center">
-            <div class="col-lg-5 col-md-7">
+            <div class="col-12 col-sm-10 col-md-8 col-xl-6">
                 <div class="card bg-secondary border-0 mb-0">
                     <div class="card-body px-lg-5 py-lg-5">
                         <form asp-controller="Account" asp-action="ForgotPassword" id="forgotPasswordForm" method="post">
