--- a/_source/BaseAdminProject/Views/Home/Index.cshtml
+++ b/_source/BaseAdminProject/Views/Home/Index.cshtml
@@ -27,6 +27,9 @@
                     </nav>
                 </div>
             </div>
+
+            <partial name="_StatusMessage" />
+
         </div>
     </div>
 </div>
