--- a/_source/BaseAdminProject/Views/Shared/_Sidenav.cshtml
+++ b/_source/BaseAdminProject/Views/Shared/_Sidenav.cshtml
@@ -5,7 +5,7 @@
         <!-- Brand -->
         <div class="sidenav-header  d-flex  align-items-center">
             <a class="navbar-brand" asp-action="Index" asp-controller="Home">
-                <img src="https://demos.creative-tim.com/argon-dashboard-pro/assets/img/brand/blue.png" class="navbar-brand-img" alt="...">
+                <img src="~/images/logo/logo.png" class="navbar-brand-img" alt="...">
             </a>
             <div class="ml-auto ">
                 <!-- Sidenav toggler -->
