--- a/_source/BaseAdminProject/Views/Shared/_LayoutManage.cshtml
+++ b/_source/BaseAdminProject/Views/Shared/_LayoutManage.cshtml
@@ -7,7 +7,7 @@
 }
 
 <!-- Header -->
-<div class="header pb-6 d-flex align-items-center" style="min-height: 300px; background-image: url(https://demos.creative-tim.com/argon-dashboard-pro/assets/img/theme/profile-cover.jpg); background-size: cover; background-position: center top;">
+<div class="header pb-6 d-flex align-items-center" style="min-height: 300px; background-image: url(https://via.placeholder.com/300); background-size: cover; background-position: center top;">
     <!-- Mask -->
     <span class="mask bg-gradient-default opacity-8"></span>
     <!-- Header container -->
