--- a/_source/BaseAdminProject/src/sass/common/index.scss
+++ b/_source/BaseAdminProject/src/sass/common/index.scss
@@ -3,5 +3,10 @@
 @import "~@fortawesome/fontawesome-free/scss/regular";
 @import "~@fortawesome/fontawesome-free/scss/solid";
 
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700);
+
+//Update colors of bootstrap to change all application
+$primary: #ea7f73 !default;
+
 @import "./full-importation";
 @import "./forms";
